# RTTdjango

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
Parser/: apps.py  reptotext.py  urls.py  views.py
Parser/templates/Parser/: index.html  main.html  scrape.html
RTTDjango/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: app.css
static/js/: scrape.js
